Flip names for bones its not working #52685

Closed
opened 2017-09-09 00:32:12 +02:00 by Nahuel Belich · 29 comments

System Information
win 7 x64
Ubuntu

Blender Version
Broken: 2.79 RC2 and 6859695
Worked: 2.78c

Short description of error
Its changing the .L/R but its not removing the .001 (.xxx) number of the bone that its generated after copying it.
2.78c
image.png To --> image.png

2.79 RC2 And above
image.png To -->image.png

Exact steps for others to reproduce the error
bones flip names.blend
1-Select, if it is not selected, the bone asda.L.001
2- in edit mode Press "W" and select flip names

**System Information** win 7 x64 Ubuntu **Blender Version** Broken: 2.79 RC2 and 6859695 Worked: 2.78c **Short description of error** Its changing the .L/R but its not removing the .001 (.xxx) number of the bone that its generated after copying it. 2.78c ![image.png](https://archive.blender.org/developer/F780646/image.png) To --> ![image.png](https://archive.blender.org/developer/F780647/image.png) 2.79 RC2 And above ![image.png](https://archive.blender.org/developer/F780646/image.png) To -->![image.png](https://archive.blender.org/developer/F780653/image.png) **Exact steps for others to reproduce the error** [bones flip names.blend](https://archive.blender.org/developer/F780654/bones_flip_names.blend) 1-Select, if it is not selected, the bone asda.L.001 2- in edit mode Press "W" and select flip names
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

#63271 was marked as duplicate of this issue

#63271 was marked as duplicate of this issue

#54189 was marked as duplicate of this issue

#54189 was marked as duplicate of this issue

#54074 was marked as duplicate of this issue

#54074 was marked as duplicate of this issue

#52790 was marked as duplicate of this issue

#52790 was marked as duplicate of this issue
Member

Added subscribers: @mont29, @JoshuaLeung

Added subscribers: @mont29, @JoshuaLeung
Joshua Leung self-assigned this 2017-09-11 07:43:46 +02:00
Member

Confirmed. This behaviour looks wrong/incorrect to me.

Although @mont29 mentioned in #51543 that this sort of behaviour is apparently how it's now supposed to work, I'll take a look at what's going on here, as the current behaviour doesn't look very useful at all.

Confirmed. This behaviour looks wrong/incorrect to me. Although @mont29 mentioned in #51543 that this sort of behaviour is apparently how it's now supposed to work, I'll take a look at what's going on here, as the current behaviour doesn't look very useful at all.

I think Flip names does what it should do currently - flipping names, not trying to change names to match (and usually fail in all but simplest cases) some mirror pattern.

IMHO, here we'd rather need a new 'Copy Mirror' operator, that would properly duplicate and rename bones at the same time? I cannot really see how we could achieve a proper 'name mirroring' a posteriori anyways, too much corner cases that would break such attempt.

I think Flip names does what it should do currently - flipping names, not trying to change names to match (and usually fail in all but simplest cases) some mirror pattern. IMHO, here we'd rather need a new 'Copy Mirror' operator, that would properly duplicate and rename bones at the same time? I cannot really see how we could achieve a proper 'name mirroring' *a posteriori* anyways, too much corner cases that would break such attempt.

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

"IMHO, here we'd rather need a new 'Copy Mirror' operator, that would properly duplicate and rename bones at the same time?"

Symmetrize is doing that already by it's symmetrizing it at the same time.

> "IMHO, here we'd rather need a new 'Copy Mirror' operator, that would properly duplicate and rename bones at the same time?" Symmetrize is doing that already by it's symmetrizing it at the same time.
Author

In #52685#458368, @ErickNyanduKabongo wrote:

"IMHO, here we'd rather need a new 'Copy Mirror' operator, that would properly duplicate and rename bones at the same time?"

Symmetrize is doing that already by it's symmetrizing it at the same time.

your right, just a few adjusts in the documentation and hints should fix the misunderstanding. image.png

The functionality its there, bad report on my part sorry.

> In #52685#458368, @ErickNyanduKabongo wrote: > > >> "IMHO, here we'd rather need a new 'Copy Mirror' operator, that would properly duplicate and rename bones at the same time?" > > Symmetrize is doing that already by it's symmetrizing it at the same time. your right, just a few adjusts in the documentation and hints should fix the misunderstanding. ![image.png](https://archive.blender.org/developer/F788431/image.png) The functionality its there, bad report on my part sorry.

Added subscriber: @DKesserich

Added subscriber: @DKesserich

Symmetrize doesn't necessarily solve the problem, as it needs a root bone/object to symmetrize against. See my .blend on #52671 for a case where Symmetrize wouldn't work at all.

I feel like #50393 was the corner case (selecting both sides of an armature and doing flip names? Who does that? And WHY? And Dalai had dismissed it as not a bug at the time) and fixing it broke the standard use case. Flip names worked the way it worked at least since 2.49, and nobody minded.

Symmetrize doesn't necessarily solve the problem, as it needs a root bone/object to symmetrize against. See my .blend on #52671 for a case where Symmetrize wouldn't work at all. I feel like #50393 was the corner case (selecting both sides of an armature and doing flip names? Who does that? And WHY? And Dalai had dismissed it as not a bug at the time) and fixing it broke the standard use case. Flip names worked the way it worked at least since 2.49, and nobody minded.

Added subscriber: @Xyotic

Added subscriber: @Xyotic

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscriber: @JulianDarley

Added subscriber: @JulianDarley

i have looked at https://developer.blender.org/T52790 and at the documentation, and for me this is still a bug. i following a lynda.com blender rigging tutorial that uses v2.72 and i have done exactly what the instructor has done and his 001 numbers get removed and mine do not.

i have looked at https://developer.blender.org/T52790 and at the documentation, and for me this is still a bug. i following a lynda.com blender rigging tutorial that uses v2.72 and i have done exactly what the instructor has done and his 001 numbers get removed and mine do not.

Added subscriber: @sok0

Added subscriber: @sok0

Encountered the bug while following this tutorial:

https://cgi.tutsplus.com/tutorials/building-a-basic-low-poly-character-rig-in-blender--cg-16955


Step 30

You will notice that the new bones have a .l.001, .l.002...extension. Press W and click on Flip Names. This will replace the .l.001 to .r (right).
Encountered the bug while following this tutorial: https://cgi.tutsplus.com/tutorials/building-a-basic-low-poly-character-rig-in-blender--cg-16955 ``` Step 30 You will notice that the new bones have a .l.001, .l.002...extension. Press W and click on Flip Names. This will replace the .l.001 to .r (right). ```

In #52685#477023, @sok0 wrote:
Encountered the bug while following this tutorial:

https://cgi.tutsplus.com/tutorials/building-a-basic-low-poly-character-rig-in-blender--cg-16955


Step 30

You will notice that the new bones have a .l.001, .l.002...extension. Press W and click on Flip Names. This will replace the .l.001 to .r (right).

Your problem is not a bug, it is blender that is getting better, do this:
Go back to the step 17: after selecting those bones hit 'W' and from menu chose symmetrize. Then Continue from step 31

As you can see back when that tutorial was made, Blender didn't have symmetrize.

> In #52685#477023, @sok0 wrote: > Encountered the bug while following this tutorial: > > https://cgi.tutsplus.com/tutorials/building-a-basic-low-poly-character-rig-in-blender--cg-16955 > > ``` > > Step 30 > > You will notice that the new bones have a .l.001, .l.002...extension. Press W and click on Flip Names. This will replace the .l.001 to .r (right). > ``` Your problem is not a bug, it is blender that is getting better, do this: Go back to the step 17: after selecting those bones hit 'W' and from menu chose symmetrize. Then Continue from step 31 As you can see back when that tutorial was made, Blender didn't have symmetrize.
Member

Added subscribers: @LaurentRenaud, @cyaoeu

Added subscribers: @LaurentRenaud, @cyaoeu

Added subscriber: @OliverBurn

Added subscriber: @OliverBurn

Symmetrise for bones has existed for over 2 years since 2.75. the flip names tool working correctly was an additional feature which worked and was very useful. For example in the case that symmetrising using the armature's origin, as it does is for some reason not available, the 3D cursor could be used to duplicate and scale across to achieve symmetry not connected to the object's origin.

This is not an improvement, it is a regression.

Symmetrise for bones has existed for over 2 years since 2.75. the flip names tool working correctly was an additional feature which worked and was very useful. For example in the case that symmetrising using the armature's origin, as it does is for some reason not available, the 3D cursor could be used to duplicate and scale across to achieve symmetry not connected to the object's origin. This is not an improvement, it is a regression.

This issue was referenced by cee66b8cc0

This issue was referenced by cee66b8cc0bf6d5419af3187ccd9392b770a6c2f

This issue was referenced by 4762c099d7

This issue was referenced by 4762c099d75b12cfbd1d86000cc01c2bce57414b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@OliverBurn having a generic tool broken to support a specific use case in relation with another tool, even is that use case is common, is not a feature, it is at best a very bad hack.

That being said, proper solution here is to add option to duplicate tool to flip names immediately.

Also added back as an option to strip numbers from flipped names in operator, option to be used only with sane bone naming scheme (else numbers between both sides are likely going to get incoherent).

@OliverBurn having a generic tool broken to support a specific use case in relation with another tool, even is that use case is common, is not a feature, it is at best a very bad hack. That being said, proper solution here is to add option to duplicate tool to flip names immediately. Also added back as an option to strip numbers from flipped names in operator, option to be used only with sane bone naming scheme (else numbers between both sides are likely going to get incoherent).

Added subscribers: @fabianP, @brecht, @WilliamReynish

Added subscribers: @fabianP, @brecht, @WilliamReynish
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
11 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52685
No description provided.